--- a/configs/conf.yaml
+++ b/configs/conf.yaml
@@ -2,6 +2,6 @@ client:
   addr: "rtsp://192.168.1.66:8554/live"
   reconnect-pause: 20000
 server:
-  tcp-port: 8554
-  udp-port: 8000
-  udp-rtcp-port: 8001
+  tcp-port: :8554
+  udp-port: :8000
+  udp-rtcp-port: :8001
